# portfolio-backend

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
dev_stack/docker/: compose.dev-tool.yaml  compose.yaml
dev_stack/linter/: .flake8  run.sh
dev_stack/server/: run.sh
local_stack/docker/: compose.yaml
src/: __init__.py
src/_adapters/: __init__.py
src/_adapters/_entry_points/: __init__.py
src/_adapters/_entry_points/_api/: __init__.py  _main.py
