[tool.poetry]
package-mode = false
name = "portfolio-backend"
description = "Portfolio backend side"
authors = ["JosueOb <josuericardocando@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.linter.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
