[tool.poetry]
package-mode = false
name = "portfolio-backend"
description = "Portfolio backend side"
authors = ["JosueOb <josuericardocando@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.linter.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
